# P_AI

./: .gitignore  README.md
Autogen_Study/TestAgentBroker/: TestBroker.py
Autogen_Study/TestAgentOnContainer/: Agents.py  dockerfile  requirements.txt
Autogen_Study/TestHIL/: TestHIL.py
Autogen_Study/TestOrchestrator/: TestOrchestrator.py
Autogen_Study/Tutorial/: 00_Tutorial.py  01_Conversation.py  02_TerminatingConversation.py  03_AllowFeedback.py  04_DockerJupyterExecutor.py  05_LocalJupyterExecutor.py  06_RemoteJupyterExecutor.py  07_AssignExecutorToAgent.py  07_result.txt  07_result_3.5turbo.txt  07_result_4.txt  08_AssignLocalExecutorToAgent.py  09_UseExecutorInConversion.py  10_DefaultSystemMessage.py  11_AutogenDefaultSchema.json  11_PydanticSchema.json  11_RegistTool.py  12_SummaryConversation.py  12_result.txt  13_SequentialChat.py  14_GroupChatManager.py  15_GroupChatInSequentialChat.py  _SmartExecutor.py
Dragonball/: README.md
Dragonball/cleaner/: Dockerfile  delete_unused_pods.py  requirements.txt
Dragonball/cleaner/k8s-manifests/: cronjob-delete-unused-pods.yaml
Dragonball/models/: pyproject.toml
Dragonball/models/agents/custom/agentTemplate/: __main__.py  agent.py  dockerfile  pyproject.toml  task_manager.py
Dragonball/models/agents/custom/agentTemplate/common/server/: mcp_clientsadg.py  mcp_utils.py
Dragonball/models/agents/custom/agentTemplate/mcp-config/: mcp_config.json
Dragonball/models/agents/custom/agentTemplate/react_agent/: graph.py  prompts.py  utils.py
Dragonball/models/agents/default/codewriter/: __main__.py  agent.py  dockerfile  pyproject.toml  task_manager.py
Dragonball/models/agents/default/codewriter/common/: types.py
Dragonball/models/agents/default/codewriter/common/server/: server.py
Dragonball/models/agents/default/codewriter/react_agent/: configuration.py  graph.py  prompts.py  tools.py
Dragonball/models/agents/default/codewriter/react_agent/mcp-config/: mcp_config.json
Dragonball/models/agents/default/defaultagent/: agent.py  pyproject.toml
Dragonball/models/agents/default/defaultagent/common/client/: __init__.py
Dragonball/models/agents/default/defaultagent/common/server/: mcp_client.py  mcp_utils.py  server.py
Dragonball/models/agents/default/defaultagent/react_agent/: __init__.py  graph.py  state.py
Dragonball/models/common/client/: client.py
Dragonball/models/hosts/cli/: pyproject.toml
Dragonball/models/hosts/multiagent/: host_agent.py  pyproject.toml  remote_agent_connection.py
Dragonball/services/: pyproject.toml
Dragonball/services/components/: agent_list.py  async_poller.js  async_poller.py  header.py  page_scaffold.py  side_nav.py
Dragonball/services/pages/: agent_list.py  home.py
Dragonball/services/service/client/: client.py
Dragonball/services/service/server/: server.py  test_image.py
Dragonball/services/state/: agent_state.py  host_agent_service.py
Dragonball/services/styles/: styles.py
KubenetesPractice/: __main__.py  helmChart.py  kuberStatus.py  main.py  nginx-pod.yaml  pyproject.toml
KubenetesPractice/mychart/: values.yaml
LangChain_LangGraph/Message/: 00_SystemMessage.py  01_HumanMessage.py  02_AIMessageChunk.py
LangChain_LangGraph/Tutorial/: 00_SimpleAgent.py  01_PromptTemplate.py
TestAgentBroker/: TestBroker.py
TestLangGraph/: TestLang.py
mcptoolboxpractice/: SmitheryTest.py  __init__.py  configuration.py  pyproject.toml  tools.py
mcptoolboxpractice/TeddySrc/: graph.py  utils.py
mcptoolboxpractice/mcp-config/: mcp_config.json
