[project]
name = "mcptoolboxpractice"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiofiles>=24.1.0",
    "langchain>=0.3.24",
    "langchain-community>=0.3.23",
    "langchain-mcp-adapters>=0.0.3",
    "langchain-mcp-tools>=0.2.4",
    "langchain-openai>=0.3.15",
    "langgraph>=0.4.1",
    "mcp[cli]>=1.7.0",
    "modelcontextprotocol>=0.1.0",
    "pip>=25.1",
    "smithery>=0.1.3",
    "websockets>=15.0.1",
]
