[project]
name = "dragonball-models-agents-default-codewriter"
version = "0.1.0"
description = "LangGraph codewriter agent with A2A Protocol"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dragonball-models",
    "click>=8.1.8",
    "httpx>=0.28.1",
    "langchain_openai>=0.3.14",
    "langgraph>=0.3.18",
    "pydantic>=2.10.6",
    "python-dotenv>=1.1.0",
]

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.uv.sources]
dragonball-models = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
